--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="main.js" type="module"></script>
 
-    <title>Highscore</title>
+    <title>Highscore2</title>
 </head>
 
 <body>
