added all files. again.

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <h3 class="computerText"></h3>
 
             <div class="choice"></div>
-
+            <div class="scoreComputerDiv">Score:</div>
         </div>
 
 
@@ -54,9 +54,10 @@
     <div class="overlay hidden">
         <div class="overlayResult">
             <h2 class="resultText2"></h2>
+            <button class="btn">Starta om!</button>
         </div>
     </div>
-
+    <button id="patch">patch</button>
 </body>
 
 </html>
