Fixed array error

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="main.js" type="module"></script>
-
-
-    <title>Highscore</title>
+    <title>Sten, sax, påse</title>
 </head>
 
 <body>
@@ -37,7 +35,7 @@
         </div>
 
         <div class="box">
-            <h3 class="Highscore">Computer:</h3>
+            <h3>Computer:</h3>
             <h3 class="computerText"></h3>
 
             <div class="choice"></div>
@@ -45,8 +43,12 @@
         </div>
 
 
+        <div>
 
-        <div class="box" id="high-score"></div>
+            <h3>Highscore</h3>
+            <div class="box" id="high-score"></div>
+        </div>
+
     </div>
 
     <div id="footer"></div>
@@ -57,7 +59,7 @@
             <button class="btn">Starta om!</button>
         </div>
     </div>
-    <button id="patch">patch</button>
+
 </body>
 
 </html>
